# isi-ros-pkg

./: README
isi_3d_recognition/: stack.xml
isi_3d_recognition/c3_hlac/: CMakeLists.txt  Makefile  manifest.xml
isi_3d_recognition/c3_hlac/include/c3_hlac/: c3_hlac.h  c3_hlac_tools.h  c3_hlac_tools.hpp
isi_3d_recognition/c3_hlac/src/: c3_hlac.cpp
isi_3d_recognition/c3_hlac/test/: example_c3_hlac.cpp
isi_3d_recognition/c3_hlac_core/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
isi_3d_recognition/c3_hlac_core/include/c3_hlac_core/: c3_hlac_core.h
isi_3d_recognition/color_voxel_recognition/: CMakeLists.txt  README  mainpage.dox  manifest.xml
isi_3d_recognition/color_voxel_recognition/demos/: display_config
isi_3d_recognition/color_voxel_recognition/demos/SH/: detect_test.sh  learn_env.sh  learn_obj.sh
isi_3d_recognition/color_voxel_recognition/demos/param/: parameters.txt
isi_3d_recognition/color_voxel_recognition/include/color_voxel_recognition/: FILE_MODE  param.h  pca.h  search.h  search_c3_hlac.h
isi_3d_recognition/color_voxel_recognition/launch/: detect.launch  detect_multi.launch  save_data_and_view.launch
isi_3d_recognition/color_voxel_recognition/src/: param.cpp  pca.cpp  search.cpp
isi_3d_recognition/color_voxel_recognition/test/: calc_scene_auto_threshold.cpp  detect_object.cpp  detect_object_multi.cpp  extract_c3_hlac_models.cpp  extract_c3_hlac_scene.cpp  get_voxel_model.cpp  get_voxel_scene.cpp  pca_models.cpp  pca_scene.cpp  save_data.cpp  variance_show.cpp
